# aegis-guard

./: .gitignore  AegisGuard.desktop  Cargo.toml  INSTALL.md  Install-AegisGuard.desktop  LICENSE  Makefile  README.md  aegis.sh  install-desktop-launcher.sh  install.sh  run-dashboard.sh  run-engine.sh  run-observer.sh  test-ipc.sh
.github/workflows/: ci.yml  release.yml
crates/active-defense/: Cargo.toml
crates/active-defense/src/: audit.rs  kill.rs  lib.rs  models.rs  quarantine.rs  safety.rs  whitelist.rs
crates/behavioral/: Cargo.toml
crates/behavioral/src/: baseline.rs  lib.rs  models.rs  scorer.rs
crates/deception/: Cargo.toml
crates/deception/src/: canary.rs  honeypot.rs  lib.rs  models.rs  trap.rs
crates/entropy/: Cargo.toml
crates/entropy/src/: classify.rs  lib.rs  models.rs  scan.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/journal/: Cargo.toml
crates/journal/src/: db.rs  digest.rs  export.rs  lib.rs  models.rs
crates/process-engine/: Cargo.toml
crates/process-engine/src/: main.rs  models.rs  rules.rs  rules_path.rs  scanner.rs
crates/self-protect/: Cargo.toml
crates/self-protect/src/: binary.rs  integrity.rs  lib.rs  models.rs  ptrace.rs
crates/threat-intel/: Cargo.toml
crates/threat-intel/src/: bundled_feed.json  feed.rs  ioc.rs  lib.rs  matcher.rs  models.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
install/: setup.sh
installer/: Cargo.toml
installer/src/: main.rs
installers/: install-linux.sh  uninstall-linux.sh
network-observer/: README.md  go.mod
network-observer/cmd/observer/: main.go
network-observer/internal/grpc/: json_bridge.go  server.go
network-observer/internal/netmon/: monitor.go
network-observer/internal/rules/: net_rules.go
proto/: aegis.proto
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.js  App.tsx  main.tsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  ipc_bridge.rs  lib.rs  main.rs  net_bridge.rs  phase5_bridge.rs  state.rs
tauri-app/src/components/: AnomalyBanner.js  AnomalyBanner.tsx  AuditLogPanel.js  AuditLogPanel.tsx  CanaryPanel.js  CanaryPanel.tsx  ConfidenceBadge.js  ConfidenceBadge.tsx  ConfirmModal.js  ConfirmModal.tsx  DebugLogPanel.js  DebugLogPanel.tsx  DrillDownModal.js  DrillDownModal.tsx  ForensicsPanel.js  ForensicsPanel.tsx  ProcessList.js  ProcessList.tsx  ProcessRow.js  ProcessRow.tsx  RuleBadge.js  RuleBadge.tsx  Sidebar.js  Sidebar.tsx  ThreatIntelPanel.js  ThreatIntelPanel.tsx  ThreatJournal.js  ThreatJournal.tsx  UpdateBanner.js  UpdateBanner.tsx
tauri-app/src/hooks/: useIpc.js  useIpc.ts
tauri-app/src/store/: processStore.js  processStore.ts
tauri-app/src/types/: index.ts
