[workspace]
members = [
    "crates/process-engine",
    "crates/ipc",
    "crates/journal",
    "crates/entropy",
    "crates/updater",
    "crates/active-defense",
    "crates/threat-intel",
    "crates/behavioral",
    "crates/deception",
    "crates/self-protect",
    "tauri-app/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1",   features = ["full"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1",   features = ["v4", "serde"] }
blake3             = "1"

[profile.release]
opt-level     = 3
strip         = true
lto           = true
codegen-units = 1
