[package]
name        = "aegis-installer"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard interactive installer — by Vladimir Unknown"

[[bin]]
name = "aegis-installer"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
