[package]
name        = "active-defense"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard — Phase 4 active response engine (kill, quarantine, whitelist)"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
blake3      = { workspace = true }
tokio       = { workspace = true }
rusqlite    = { version = "0.31", features = ["bundled"] }
once_cell   = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs", "user"] }
