[package]
name        = "behavioral"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard Phase 5 — process behavioral baseline + anomaly scoring"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
