[package]
name        = "entropy"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard — on-demand Shannon entropy file scanner"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
walkdir    = "2"
rayon      = "1"
