[package]
name    = "ipc"
version = "0.1.0"
edition = "2021"
description = "Aegis-Guard — Unix Domain Socket IPC bridge"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
