[package]
name    = "journal"
version = "0.1.0"
edition = "2021"
description = "Aegis-Guard — SQLite threat journal with tamper-evident digests"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
blake3      = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
rusqlite    = { version = "0.31", features = ["bundled"] }
