[package]
name        = "process-engine"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard — Linux process monitoring and anomaly detection engine"

[[bin]]
name = "aegis-process-engine"
path = "src/main.rs"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
procfs             = "0.17"
ipc                = { path = "../ipc" }
