[package]
name        = "threat-intel"
version     = "0.1.0"
edition     = "2021"
description = "Aegis-Guard Phase 5 — CTI feed matching (IP/domain/hash)"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
reqwest     = { version = "0.12", features = ["json","rustls-tls"], default-features = false }
blake3      = { workspace = true }
ipnet       = "2"
