[package]
name    = "updater"
version = "0.1.0"
edition = "2021"
description = "Aegis-Guard — GitHub release version checker"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver     = "1"
